kubernetes/apps/kroki/kroki/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kroki
  namespace: kroki
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  hostnames:
    - kroki.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kroki
          namespace: kroki
          port: 8000
